#
# Copyright (c) 2022 Winsider Seminars & Solutions, Inc.  All rights reserved.
#
# This file is part of System Informer.
#

add_subdirectory(DotNetTools)
add_subdirectory(ExtendedNotifications)
add_subdirectory(ExtendedServices)
add_subdirectory(ExtendedTools)
add_subdirectory(HardwareDevices)
add_subdirectory(NetworkTools)
add_subdirectory(OnlineChecks)
add_subdirectory(ToolStatus)
add_subdirectory(Updater)
add_subdirectory(UserNotes)
add_subdirectory(WindowExplorer)
